syntax = "proto3";

package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

option (gogoproto.testgen_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;

enum EncryptionAlgo {
  ENCRYPTION_NONE = 0;
  ENCRYPTION_XSALSA20_POLY1305 = 1;
  ENCRYPTION_AES_GCM = 2;
}

message ConnectionMetadata {
  EncryptionAlgo encryption_algo = 1;
  bytes public_key = 2;
  bytes nonce = 3;
}

message ServiceMetadata {
  string ip = 1;
  uint32 tcp_port = 2;
  uint32 udp_port = 3;
  uint32 service_id = 4;
  repeated uint32 service_tcp = 5;
  repeated uint32 service_udp = 6;
  string price = 7;
  string beneficiary_addr = 8;
}

message StreamMetadata {
  uint32 service_id = 1;
  uint32 port_id = 2;
  bool is_payment = 3;
}
